3.POCE.9: Basics fully completed and functioning. HomePage alignment repaired.

--- a/public/styles.css
+++ b/public/styles.css
@@ -39,7 +39,11 @@
   font-size: small;
 }
 
+.cmts{
+  font-size:small;
+}
+
 .cmtsCrdt{
-  /* font-family:sans-serif; */
-  font-size: smaller;
+  font-family:Franklin Ghotic Medium;
+  font-size:smaller;
 }
